[tool.poetry]
name = "repl_python3_Using-AWS-CDK-Pipelines-and-AWS-Lambda-for-multi-branch-pipe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
